test_scripts/robustness_analysis_sampling.R
### FIRST DECLARE THE PARAMETERS REQUIRED FOR THIS ANALYSIS:
# A: THE ROOT FILE PATH. WHERE THE PARAMETER SAMPLES SHOULD BE STORED
FILEPATH<-"/home/kja505/Documents/Spartan3_Test_Data/OAT_Spartan2/Sampling/ByValues"
# B: THE SIMULATION PARAMETERS BEING EXPLORED
PARAMETERS <- c("thresholdBindProbability","chemoThreshold",
                "chemoUpperLinearAdjust","chemoLowerLinearAdjust",
                "maxVCAMeffectProbabilityCutoff","vcamSlope")
# C: BASELINE VALUES FOR ALL PARAMETERS (CALIBRATION VALUES). THIS SETS
# THE VALUES OF THE OTHER PARAMETERS WHEN ANOTHER IS THAT OF FOCUS IN
# THE ANALYSIS
BASELINE<-c(50,0.3,0.2,0.04,0.60,1.0)
# E: PARAMETER VALUE INFORMATION
# YOU CAN SPECIFY THIS IN TWO WAYS: (i) THE MINIMUM AND MAXIMUM OF EACH
# PARAMETER, AND THE INCREMENT OVER WHICH THE SAMPLING WAS INCREASED
# (ii) A STRING LIST OF VALUES THAT PARAMETER WAS ASSIGNED IN SIMULATION
# EXAMPLE OF (i):
PMIN<-c(0,0.10,0.10,0.015,0.1,0.25)
PMAX<-c(100,0.9,0.50,0.08,1.0,5.0)
PINC<-c(10,0.1,0.05,0.005,0.05,0.25)
# EXAMPLE OF (ii)
PARAMVALS<-c("0,50,90","0.10,0.3,0.8","0.10,0.25,0.4","0.015,0.04,0.08","0.1,0.5,0.9","0.25,1.25,2.0,3.0,5.0")

# NOW RUN THE METHOD, EITHER SPECIFYING THE USE OF PMIN,PMAX,PINC, OR PARAMVALS
oat_parameter_sampling(FILEPATH,PARAMETERS,BASELINE,PMIN=PMIN,PMAX=PMAX,PINC=PINC,PARAMVALS=NULL)
# Alternative
oat_parameter_sampling(FILEPATH,PARAMETERS,BASELINE,PMIN=NULL,PMAX=NULL,PINC=NULL,PARAMVALS=PARAMVALS)
